src/test/resources/example/cocos/valid/validMethSigName.ocl
/* (c) https://github.com/MontiCore/monticore */
import example.CDs.DefaultTypes.*;
import example.CDs.AuctionCD.*;

ocl validMethSigName {
  context boolean Person.personalMsg()
  pre Test: true;
  post Test: result == List{m in Person.message | !m.isAuctionSpecific()};
}
