src/test/resources/example/cocos/invalid/invalidTypes.ocl
import example.CDs.AuctionCD.*;
import example.CDs.DefaultTypes.*;

ocl types {
  inv Test :
     10 == 10m;
}
